--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,7 +69,7 @@ stages:
   - stage: Deploy
     displayName: Deploy
     dependsOn: CIpipline
-    condition: succeeded()
+    condition: succeededOrFailed()
     jobs:
       - job: ManualValidation
         pool: server
