--- a/.github/workflows/infra1.yml
+++ b/.github/workflows/infra1.yml
@@ -11,13 +11,13 @@ on:       #trigger
     #   - .github/workflows/infra1.yml
 
 env:
-RESOURCE_NAME: ${{ secrets.RESOURCE_NAME }}
-STORAGE_NAME: ${{ secrets.STORAGE_NAME }}
-CONTAINER_NAME: ${{ secrets.CONTAINER_NAME }}
-KEY_NAME: ${{ secrets.KEY_NAME }}
+      RESOURCE_GROUP: ${{ secrets.RESOURCE_GROUP }}
+      STORAGE_ACCOUNT_NAME: ${{ secrets.STORAGE_ACCOUNT_NAME }}
+      CONTAINER_NAME: ${{ secrets.CONTAINER_NAME }}
+      STATE_FILE: ${{ secrets.STATE_FILE }}
 
 jobs: 
-  planning:   #job ka nam
+  Terraform-Init:   #job ka nam
     runs-on: ubuntu-latest    #runner ka nam
     steps:
       - name: repo-chekout
@@ -31,10 +31,35 @@ jobs:
       - name: Terraform Init
         run: |
           terraform init \
-            -backend-config="storage_account_name=${{ secrets.STORAGE_NAME }}" \
+            -backend-config="storage_account_name=${{ secrets.STORAGE_ACCOUNT_NAME }}" \
             -backend-config="container_name=${{ secrets.CONTAINER_NAME }}" \
-            -backend-config="key=${{ secrets.KEY_NAME }}" \
-            -backend-config="resource_group_name=${{ secrets.RESOURCE_NAME }}"
+            -backend-config="key=${{ secrets.STATE_FILE }}" \
+            -backend-config="resource_group_name=${{ secrets.RESOURCE_GROUP }}"
+        working-directory: enviroment/dev
+  Validate:
+    runs-on: ubuntu-latest
+    needs: [Terraform-Init]  
+    steps:
+      - name: repo-checkout
+        uses: action/checkout@v5
+      - name: setup-terraform
+        uses: hashicorp/setup-terraform@v3
+      - name: Terraform Validate
+        run: terraform validate
+        working-directory: enviroment/dev
+  plan:
+   runs-on: ubuntu-latest
+   needs: [Validate]  
+   steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+      - name: Terraform Plan
+        run: terraform plan -out=tfplan
+        working-directory: enviroment/dev
+        
             
         
       
+
