--- a/.github/workflows/infra1.yml
+++ b/.github/workflows/infra1.yml
@@ -7,59 +7,82 @@ on:       #trigger
   pull_request:
     branches:
       - main 
-    # paths-ignore:
-    #   - .github/workflows/infra1.yml
-
-env:
-      RESOURCE_GROUP: ${{ secrets.RESOURCE_GROUP }}
-      STORAGE_ACCOUNT_NAME: ${{ secrets.STORAGE_ACCOUNT_NAME }}
-      CONTAINER_NAME: ${{ secrets.CONTAINER_NAME }}
-      STATE_FILE: ${{ secrets.STATE_FILE }}
-
-jobs: 
-  Terraform-Init:   #job ka nam
-    runs-on: ubuntu-latest    #runner ka nam
-    steps:
-      - name: repo-chekout
-        uses: actions/checkout@v5   # task hai
-      - name: az login
-        uses: azure/login@v2
-        with:
-          creds: ${{ secrets.AZURE_CREDITIONAL }}
-      - name: setup-terrform
-        uses: hashicorp/setup-terraform@v3
-      - name: Terraform Init
-        run: |
-          terraform init \
-            -backend-config="storage_account_name=${{ secrets.STORAGE_ACCOUNT_NAME }}" \
-            -backend-config="container_name=${{ secrets.CONTAINER_NAME }}" \
-            -backend-config="key=${{ secrets.STATE_FILE }}" \
-            -backend-config="resource_group_name=${{ secrets.RESOURCE_GROUP }}"
-        working-directory: enviroment/dev
-  Validate:
+jobs:
+  terraform-build:
     runs-on: ubuntu-latest
-    needs: [Terraform-Init]  
-    steps:
-      - name: repo-checkout
-        uses: action/checkout@v5
-      - name: setup-terraform
-        uses: hashicorp/setup-terraform@v3
-      - name: Terraform Validate
-        run: terraform validate
-        working-directory: enviroment/dev
-  plan:
-   runs-on: ubuntu-latest
-   needs: [Validate]  
-   steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-      - name: Terraform Plan
-        run: terraform plan -out=tfplan
-        working-directory: enviroment/dev
-        
+    steps: 
+     - name: repo-checkout
+       uses: actions/checkout@v5
+     - name: az-login
+       uses: azure/login@v2
+       with:
+         creds: ${{ secrets.AZURE_CREDENTIALS }}
+     - name: install-terraform
+       uses: hashicorp/setup-terraform@v3
+       with:
+         terraform_version: "1.1.7"
+  
+     - name: Terraform init azurerm backend
+       uses: ahmedig/terraform-azurerm-backend@v4
+       with:
+         azure_credentials: ${{ secrets.AZURE_CREDENTIALS }}
+         resource_group_name: myresourcegroup
+         container_name: mycontainer
+         storage_account_name: storageaccount432
+         
+     - name: tflint
+       uses: terraform-linters/setup-tflint@v4
+       with:
+        tflint_version: v0.52.0
+     - name: Show version
+       run: tflint --version
+
+     - name:  TFLint
+       run: | 
+         tflint --init
+         tflint -f compact
+      
+     - name: tfsec
+       uses: aquasecurity/tfsec-sarif-action@v0.1.0
+       with:
+         soft_fail: true
+     - name: terraform-validate
+       run: terraform validate
+     - name: terraform-plan
+       run: terraform plan
+
+     
+
+  terraform-deploy:
+    needs: terraform-build
+    runs-on: ubuntu-latest
+    steps: 
+     - name: repo-checkout
+       uses: actions/checkout@v5
+     - name: az-login
+       uses: azure/login@v2
+       with:
+         creds: ${{ secrets.AZURE_CREDENTIALS }}
+     - name: install-terraform
+       uses: hashicorp/setup-terraform@v3
+       with:
+         terraform_version: "1.1.7"
+  
+     - name: Terraform init azurerm backend
+       uses: ahmedig/terraform-azurerm-backend@v4
+       with:
+         azure_credentials: ${{ secrets.AZURE_CREDENTIALS }}
+         resource_group_name: myresourcegroup
+         container_name: mycontainer
+         storage_account_name: storageaccount432
+     - name: terraform-apply
+       run: terraform apply -auto-approve 
+          
+          
+    
+    
             
         
       
+
 
